# c-playground

./: CMakeLists.txt  README.md  book.c  book.h  functional.h  main.c  memory.h
include/: book.h  compile_time.h  compile_time_if.h  functional.h  memory.h  safe_types.h  strutil.h
src/: book.c  main.c  person.c
